# subtitle-bot

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
app/: loader.py  main.py
app/data/: settings.py
app/handlers/user/: transcribe.py
app/utils/: cache.py  dispatcher.py  download_video.py  notify_admins.py  set_bot_commands.py  transcribe.py
